--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,9 +2,10 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}Mon Portfolio{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
         {% block stylesheets %}
+            <link rel="stylesheet" href="{{ asset('build/app.css') }}">
         {% endblock %}
 
         {% block javascripts %}
@@ -12,6 +13,46 @@
         {% endblock %}
     </head>
     <body>
+        <header>
+            <div class="header-content">
+                <span>Joannic Elouan</span>
+                <img src="{{ asset('images/tete.jpeg') }}" alt="tete">
+            </div>
+        </header>
+
+        <main>
         {% block body %}{% endblock %}
+
+        {% block projet %}{% endblock %}
+
+        {% block description %}{% endblock %}
+
+        {% block compétences %}{% endblock %}
+
+        {% block objectifs %}{% endblock %}
+
+        {% block groupe %}{% endblock %}
+
+        {% block individuel %}{% endblock %}
+
+        {% block appris %}{% endblock %}
+
+        {% block entreprise %}{% endblock %}
+
+        {% block buttons %}{% endblock %}
+
+        </main>
+
+        <footer>
+                <div class="footer-line">
+                <span class="icon email-icon" aria-hidden="true"></span>
+                <span>elouan.joannic@etu.univ-grenoble-alpes.fr</span>
+            </div>
+
+            <div class="footer-line">
+                <span class="icon phone-icon" aria-hidden="true"></span>
+                <span>0766137743</span>
+            </div>
+        </footer>
     </body>
 </html>
